commit tree 85e4ba206da3aa45d43e754337cc06d2e957b936

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,25 @@
+<h1>Post Show</h1>
 
+<%= @post.title %>
+<% @post.categories.each do |category| %>
+  <%= category.name %>
+<% end %>
+<%= @post.content %>
+<% @post.users.uniq.each do |user| %>
+  <%= link_to user.username, user %>
+<% end %>
+<% @post.comments.each do |comment| %>
+    <%= comment.content %>
+<% end %>
+
+<% form_for @post do |f| %>
+  <%= f.collection_select :user_ids, User.all, :id, :username %>
+  <%= f.fields_for :users, @post.users.build do |users_fields| %>
+    <%= users_fields.text_field :username %>
+  <% end %>
+  <%= f.fields_for :comments, @post.comments.build do |comments_field| %>
+    <%= comments_field.text_area :content %>
+    <%= f.hidden_field :post_id, value: @post.id %>
+  <% end %>
+  <%= f.submit "Create Comment"%>
+<% end %>
